# gamedev_courses

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  cmake.sh
basic-render/: CMakeLists.txt
basic-render/include/: basic_render.hpp
basic-render/src/: basic_render.cpp  main.cpp
engine/: CMakeLists.txt  game.cpp  game.hpp  imgui.ini  level1.txt  main.cpp
engine/engine/include/: audio.hpp  camera2d.hpp  error.hpp  input_manager.hpp  io_manager.hpp
engine/engine/include/graphics/: gl_texture.hpp  render.hpp  shader.hpp  sprite_batch.hpp  window.hpp
engine/engine/include/graphics/glm/simd/: platform.h
engine/engine/src/: audio.cpp  error.cpp  input_manager.cpp
engine/engine/src/graphics/: picopng.cpp  render.cpp  shader.cpp  sprite.cpp  sprite_batch.cpp  window.cpp
engine/engine/src/imgui/: imgui_impl_sdl_gl3.cpp
engine/game/include/: bullets.hpp  enemy.hpp  game.hpp  game_object.hpp  level.hpp  player.hpp  types.hpp
engine/game/src/: bullets.cpp  enemy.cpp  game.cpp  game_object.cpp  level.cpp  player.cpp
engine/include/: input_manager.hpp  render.hpp  window.hpp
engine/include/graphics/: image_loader.hpp  render.hpp  resource_manager.hpp  sprite.hpp  sprite_batch.hpp  texture_cache.hpp  vertex.hpp  window.hpp
engine/include/math_2d/: math_2d.hpp
engine/resources/: level1.txt
engine/resources/shaders/: fragment_shader.frag  vertex_shader.vert
engine/resources/tank_shot/: tank_shot.xcf
engine/src/: camera2d.cpp  input_manager.cpp  io_manager.cpp  main.cpp  render.cpp  window.cpp
engine/src/graphics/: image_loader.cpp  render.cpp  resource_manager.cpp  texture_cache.cpp  window.cpp
hello_libs/: CMakeLists.txt
hello_libs/hello_bins/: CMakeLists.txt
hello_libs/hello_bins/src/: main.cpp
hello_libs/hello_libs/: CMakeLists.txt
hello_libs/hello_libs/include/: hello_libs.hpp
hello_libs/hello_libs/src/: hello_libs.cpp
hello_world/: CMakeLists.txt  main.cpp
matrix-and-vector/: CMakeLists.txt  vertex_texture_cord.txt
matrix-and-vector/include/graphics/: render.hpp
matrix-and-vector/src/: main.cpp
matrix-and-vector/src/graphics/: render.cpp
opengles-min/: CMakeLists.txt
opengles-min/include/: engine.hpp
opengles-min/src/: engine.cpp  game.cpp
sdl-dynamic-linking/: CMakeLists.txt
sdl-engine/: CMakeLists.txt  main.cpp
sdl-engine/include/: engine.hpp
sdl-engine/src/: engine.cpp  main.cpp
sdl-loop/: CMakeLists.txt  CMakeLists.txt.save  CMakeLists.txt.save.1
sdl-loop/src/: main.cpp
sdl-static-linking/: CMakeLists.txt
sdl-static-linking/src/: main.cpp
texture-loading/: CMakeLists.txt
texture-loading/include/math_2d/: math_2d.hpp
texture-loading/src/: main.cpp
texture-loading/src/graphics/: render.cpp
vertex-morhning/: CMakeLists.txt
vertex-morphing/: CMakeLists.txt
vertex-morphing/include/graphics/: render.hpp  window.hpp
vertex-morphing/src/: main.cpp
vertex-morphing/src/graphics/: render.cpp  window.cpp
